Fixed horizontal scroll issues.

--- a/style/style.css
+++ b/style/style.css
@@ -199,11 +199,35 @@ h1{
 
 
 }
-.Designers{
+/*Designers*/
+.container_designers{
+    position: relative;
+
+    height: 619px;
+    max-width: 1337px;
+
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: flex-end;
+    gap: 30px;
+
+
+
+    margin-top: 135px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0;
+}
+.h2_designers{
+    top: -2.5%;
+    left: 67%;
+    position: absolute;
+
     font-family: Roboto,sans-serif;
     font-size: 20px;
     font-weight: 700;
     line-height: 23px;
+    letter-spacing: 0em;
 
     transform: rotate(-90deg);
     text-align: justify;
@@ -211,113 +235,44 @@ h1{
 
 
 }
+.designer{
+    /*background-color: #eee;*/
+    /*border-radius: 6px;*/
+    /*border: 1px solid grey;*/
+    /*padding: 0 1rem 1rem 1rem;*/
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-basis: calc(33.3%);
+}
+.designer img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+.best_designer{
+    display: flex;
+    flex-basis: 50%;
+    height: 100%;
+}
 .Info_About_Each_Designer{
     font-family: Roboto,sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 19px;
+    letter-spacing: 0em;
     text-align: left;
 }
 
-.Weight_700_For_Each_Designer{
+.Info_About_Designer{
     font-family: Roboto,sans-serif;
     font-size: 16px;
     font-weight: 700;
     line-height: 19px;
+    letter-spacing: 0em;
     text-align: left;
-}
-/*Designers*/
-
-.container-designers{
-    border: 1px solid black;
-    height: 513px;
-    max-width: 1440px;
-    display: flex;
-    flex-flow: column wrap;
-
-}
-
-
-.child_1 {
-    flex-basis: 100%;
-    background-image: url("/img/spurwing-agency-r6LceZ3ckpM-unsplash.png");
-
-}
-/*.child_1 > img{*/
-
-/*    max-height: 85%;*/
-/*    object-fit: cover;*/
-/*    object-position: center;*/
-/*}*/
-.child_2{
-    flex-basis: 30%;
-    background-color: bisque;
-
-}
-/*.child_2 > img{*/
-/*    position: relative;*/
-/*    max-height: 85%;*/
-/*    object-fit: cover;*/
-/*    object-position: center;*/
-/*}*/
-.child_3{
-    flex-basis: 70%;
-    background-color: purple;
-    display: flex;
-    flex-flow: row nowrap;
-}
-.child_3_1 {
-    flex-basis: 100%;
-    background-image: url("/img/spurwing-agency-r6LceZ3ckpM-unsplash.png");
-
-}
-
-
-
-
-
-.designers {
-    height: 619px;
-    max-width: 1337px;
-
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: baseline;
-
-
-    margin-top: 135px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 0;
-
-}
-.designer-element {
-    width: 25%;
-
-
-
-}
-
-
-.designer-element:first-child {
-    width: 50%;
-}
-
-.designer-element:first-child > div {
-    display: flex;
-    align-content: center;
-    justify-content: center;
-
-}
-
-
-
-.designer-element:first-child > img {
-    max-width: 85%;
-}
-
-.designer-element strong {
-    text-transform: uppercase;
 }
 
 /*Test Testimonials-1*/
@@ -492,8 +447,8 @@ h1{
 /*    column-gap: 1.77%;*/
 /*}*/
 .strong_point_container{
-    height: 665px;
-    max-width: 1686px;
+    height: 770px;
+
 
     /*Центрируем*/
     margin-top: 91px;
@@ -517,6 +472,8 @@ h1{
     -webkit-column-gap: 1.77%;
     -moz-column-gap: 1.77%;
     column-gap: 1.77%;
+    /*ЧТо бы появился скрол относительно своего контейнера*/
+    overflow: auto;
 }.strong_point_container > *:nth-child(1){
      -ms-grid-row: 1;
      -ms-grid-column: 1;
@@ -585,26 +542,27 @@ h1{
     grid-row-start: 2;
     grid-row-end: 4;
 }
-.element_3 img {
-    width: 100%;
-    /*height: auto;*/
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-}
+/*картинки остаются фиксированной ширины*/
+/*.element_3 img {*/
+/*    width: 100%;*/
+/*    !*height: auto;*!*/
+/*    height: 100%;*/
+/*    object-fit: cover;*/
+/*    object-position: center;*/
+/*}*/
 .element_4{
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 4;
 }
-.element_4 img {
-    width: 100%;
-    /*height: auto;*/
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-}
+/*.element_4 img {*/
+/*    width: 100%;*/
+/*    !*height: auto;*!*/
+/*    height: 100%;*/
+/*    object-fit: cover;*/
+/*    object-position: center;*/
+/*}*/
 .element_5{
     grid-column-start: 3;
     grid-column-end: 4;
@@ -620,13 +578,13 @@ h1{
     grid-row-start: 2;
     grid-row-end: 4;
 }
-.element_6 img {
-    width: 100%;
-    /*height: auto;*/
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-}
+/*.element_6 img {*/
+/*    width: 100%;*/
+/*    !*height: auto;*!*/
+/*    height: 100%;*/
+/*    object-fit: cover;*/
+/*    object-position: center;*/
+/*}*/
 .Strong_Points{
     font-family: Roboto,sans-serif;
     font-size: 20px;
